--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 "three": "./js/three.module.js",
                 "@photo-sphere-viewer/core": "./js/photosphere.module.js",
                 "@photo-sphere-viewer/gyroscope-plugin": "./js/gyroscope.module.js",
-                "@photo-sphere-viewer/compass-plugin": "./js/compass.module.js"
+                "@photo-sphere-viewer/compass-plugin": "./js/compass.module.js",
+                "@photo-sphere-viewer/markers-plugin": "./js/markers.module.js"
             }
         }
     </script>
