--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 
 <body>
 
-    <img src="img/logo.png" class="item-logo">
+
 
     <div class="container">
-        <div id="viewer" style="width: 100vw; height: 87vh;"></div>
+        <div id="viewer" style="width: 100vw; height: 87vh;">
+            <img src="img/logo.png" class="item-logo">
+        </div>
     </div>
 
 
