--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="container">
         <div id="viewer" style="width: 100vw; height: 87vh;">
-            <img src="img/logo.png" class="item-logo">
+            <img src="img/logo.png" class="item_logo">
         </div>
     </div>
 
